--- a/references/references.bib
+++ b/references/references.bib
@@ -541,3 +541,511 @@ author = {Bj{\o}rner, N. and Moura, L.},
 year   = {2018},
 title  = {Z310: {A}pplications, {E}nablers, {C}hallenges and {D}irections}
 }
+
+@inproceedings{WangGRJF16,
+  author    = {Timothy E. Wang and
+               Pierre{-}Lo{\"{\i}}c Garoche and
+               Pierre Roux and
+               Romain Jobredeaux and
+               Eric Feron},
+  title     = {Formal Analysis of Robustness at Model and Code Level},
+  booktitle = {HSCC},
+  pages     = {125--134},
+  year      = {2016},
+  publisher = {{ACM}}
+}
+
+@book{chen1995linear,
+  title={Linear system theory and design},
+  author={Chen, Chi-Tsong},
+  year={1995},
+  publisher={Oxford University Press, Inc.}
+}
+
+@article{Hilaire2010,
+	author = {Thibault   Hilaire  and  Philippe   Chevrel  and  James F.   Whidborne },
+	title = {Finite wordlength controller realisations using the specialised implicit form},
+	journal = {International Journal of Control},
+	volume = {83},
+	number = {2},
+	pages = {330-346},
+	year  = {2010},
+	publisher = {Taylor & Francis},
+	doi = {10.1080/00207170903160747},
+	
+}
+
+@misc{boom06,
+  author        = {Ton van den Boom},
+  title         = {Discrete-time systems analysis},
+  month         = {October},
+  year          = {2006},
+  note = {Additional Lecture Notes for the course SC4090},
+  publisher={Delft University of Technology}
+}
+@book{haykin2007signals,
+  title={Signals and systems},
+  author={Haykin, Simon and Van Veen, Barry},
+  year={2007},
+  publisher={John Wiley \& Sons}
+}
+@book{neuts1981matrix,
+  title={Matrix-geometric solutions in stochastic models: an algorithmic approach},
+  author={Neuts, Marcel F},
+  year={1981},
+  publisher={Courier Corporation}
+}
+@book{kuo1987automatic,
+  title={Automatic control systems},
+  author={Kuo, Benjamin C},
+  year={1987},
+  publisher={Prentice Hall PTR}
+}
+@article{haugen2005discrete,
+  title={Discrete-time signals and systems},
+  author={Haugen, Finn},
+  year={2005},
+  publisher={Citeseer}
+}
+@book{pospesel2003introduction,
+  title={Introduction to logic: Predicate logic},
+  author={Pospesel, Howard and Lycan, William G},
+  year={2003},
+  publisher={Prentice Hall}
+}
+@inproceedings{towhidi2009binary,
+  title={Binary decision diagram (BDD)},
+  author={Towhidi, Farnaz and Lashkari, Arashhabbibi and Hosseini, Raheleh Sadat},
+  booktitle={Future Computer and Communication, 2009. ICFCC 2009. International Conference on},
+  pages={496--499},
+  year={2009},
+  organization={IEEE}
+}
+@inproceedings{morse2014esbmc,
+  title={{ESBMC 1.22}},
+  author={Morse, Jeremy and Ramalho, Mikhail and Cordeiro, Lucas and Nicole, Denis and Fischer, Bernd},
+  booktitle={TACAS, LNCS},
+  volume={8413},
+  pages={405--407},
+  year={2014}
+}
+@incollection{ismail2015dsverifier,
+  title={DSVerifier: A bounded model checking tool for digital systems},
+  author={Ismail, Hussama I and Bessa, Iury V and Cordeiro, Lucas C and de Lima Filho, Eddie B and Chaves Filho, Jo{\~a}o E},
+  booktitle={Model Checking Software},
+  pages={126--131},
+  year={2015},
+  publisher={Springer}
+}
+
+@article{BessaICF16,
+  author    = {Iury Valente de Bessa and
+               Hussama Ismail and
+               Lucas C. Cordeiro and
+               Jo{\~{a}}o Edgar Chaves Filho},
+  title     = {Verification of fixed-point digital controllers using direct and delta forms realizations},
+  journal   = {Design Autom. for Emb. Sys.},
+  volume    = {20},
+  number    = {2},
+  pages     = {95--126},
+  year      = {2016}
+
+}
+
+@article{GadelhaIC17,
+  author    = {Mikhail Y. R. Gadelha and
+               Hussama Ibrahim Ismail and
+               Lucas C. Cordeiro},
+  title     = {Handling loops in bounded model checking of {C} programs via k-induction},
+  journal   = {{STTT}},
+  volume    = {19},
+  number    = {1},
+  pages     = {97--114},
+  year      = {2017},
+  doi       = {10.1007/s10009-015-0407-9}
+}
+
+@article{vratislav1999finite,
+  title={Finite word-length effects in digital state-space filters},
+  author={Vratislav Davldek and Marcela Antonosova and Bohumil Psenicka},
+  journal={Radioengineering},
+  volume={8},
+  number={4},
+  year={1999}
+}
+@book{yang2013linear,
+  title={Linear systems: non-fragile control and filtering},
+  author={Yang, Guang-Hong and Guo, Xiang-Gui and Che, Wei-Wei and Guan, Wei},
+  year={2013},
+  publisher={CRC Press}
+}
+@book{istepanian2012digital,
+  title={Digital controller implementation and fragility: A modern perspective},
+  author={Istepanian, Robert and Whidborne, James F},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
+@article{sadraddini2017formal,
+  title={Formal Methods for Adaptive Control of Dynamical Systems},
+  author={Sadraddini, Sadra and Belta, Calin},
+  journal={arXiv preprint arXiv:1703.07704},
+  year={2017}
+}
+@article{bessa2017formal,
+  title={Formal non-fragile stability verification of digital control systems with uncertainty},
+  author={Bessa, Iury and Ismail, Hussama and Palhares, Reinaldo and Cordeiro, Lucas and Chaves Filho, Joao Edgar},
+  journal={IEEE Trans. Comput.},
+  volume={66},
+  number={3},
+  pages={545--552},
+  year={2017},
+  publisher={IEEE}
+}
+@inproceedings{majumdar2012clse,
+  title={{CLSE: Closed-loop symbolic execution}},
+  author={Majumdar, Rupak and Saha, Indranil and Shashidhar, KC and Wang, Zilong},
+  booktitle={NFM},
+  pages={356--370},
+  year={2012},
+  organization={Springer}
+}
+@book{simons1994levers,
+  title={Levers of control: how managers use innovative control systems to drive strategic renewal},
+  author={Simons, Robert},
+  year={1994},
+  publisher={Harvard Business Press}
+}
+@misc{precup2011optimal,
+  title={Optimal Control Systems with Reduced Parametric Sensitivity Based on Particle Swarm Optimization and Simulated Annealing.},
+  author={Precup, Radu-Emil and David, Radu-Codrut and Preitl, Stefan and Petriu, Emil M and Tar, J{\'o}zsef K},
+  year={2011},
+  publisher={Springer}
+}
+
+@ARTICLE{keel1997robust, 
+	author={L. H. Keel and S. P. Bhattacharyya}, 
+	journal={IEEE Trans. Autom. Control}, 
+	title={Robust, fragile, or optimal?}, 
+	year={1997}, 
+	volume={42}, 
+	number={8}, 
+	pages={1098-1105}, 
+	doi={10.1109/9.618239}, 
+	ISSN={0018-9286}, 
+	month={Aug},}
+
+@book{franklin1998digital,
+  title={Digital control of dynamic systems},
+  author={Franklin, Gene F and Powell, J David and Workman, Michael L},
+  volume={3},
+  year={1998},
+  publisher={Addison-wesley Menlo Park, CA}
+}
+@book{dorf2011modern,
+  title={Modern control systems},
+  author={Dorf, Richard C and Bishop, Robert H},
+  year={2011},
+  publisher={Pearson}
+}
+@techreport{wall1994verification,
+  title={Verification and validation of software related to nuclear power plant control and instrumentation},
+  author={Wall, N and Kossilov, A},
+  year={1994}
+}
+@inproceedings{schumann2007tools,
+  title={Tools and methods for the verification and validation of adaptive aircraft control systems},
+  author={Schumann, Johann and Liu, Yan},
+  booktitle={IEEE Aerospace Conference},
+  pages={1--8},
+  year={2007},
+  organization={IEEE}
+}
+@inproceedings{belta2014formal,
+  title={Formal methods for dynamical systems},
+  author={Belta, Calin},
+  booktitle={TIME},
+  pages={3--3},
+  year={2014},
+  organization={IEEE}
+}
+@article{merz2012llbmc,
+  title={LLBMC: Bounded model checking of C and C++ programs using a compiler IR},
+  author={Merz, Florian and Falke, Stephan and Sinz, Carsten},
+  journal={Verified Software: Theories, Tools, Experiments},
+  pages={146--161},
+  year={2012},
+  publisher={Springer}
+}
+@article{abreu2016bounded,
+  title={Bounded model checking for fixed-point digital filters},
+  author={Renato B. Abreu and
+               Mikhail Y. R. Gadelha and
+               Lucas C. Cordeiro and
+               Eddie Batista de Lima Filho and
+               Waldir Sabino da Silva Jr.},
+  journal={J. Braz. Comput. Soc.},
+  volume={22},
+  number={1},
+  pages={1},
+  year={2016},
+  publisher={Springer London}
+}
+@techreport{boyd1991linear,
+  title={Linear controller design: limits of performance},
+  author={Boyd, Stephen and Barratt, Craig},
+  year={1991},
+  institution={Stanford University}
+}
+@article{veillette1992design,
+  title={Design of reliable control systems},
+  author={Veillette, Robert J and Medanic, JB and Perkins, William R},
+  journal={IEEE Trans. Autom. Control},
+  volume={37},
+  number={3},
+  pages={290--304},
+  year={1992},
+  publisher={IEEE}
+}
+@book{astrom2010feedback,
+  title={Feedback systems: an introduction for scientists and engineers},
+  author={Astr{\"o}m, Karl Johan and Murray, Richard M},
+  year={2010},
+  publisher={Princeton university press}
+}
+@book{bakshi2010control,
+  title={Control System Engineering},
+  author={Bakshi, Uday A and Bakshi, Varsha U},
+  year={2008},
+  publisher={Technical Publications Pune}
+}
+@inproceedings{shizawa1991principle,
+  title={Principle of superposition: A common computational framework for analysis of multiple motion},
+  author={Shizawa, Masahiko and Mase, Kenji},
+  booktitle={Visual Motion, 1991., Proceedings of the IEEE Workshop on},
+  pages={164--172},
+  year={1991},
+  organization={IEEE}
+}
+@article{guide1998mathworks,
+  title={The mathworks},
+  author={Guide, MATLAB User’s},
+  journal={Inc., Natick, MA},
+  volume={5},
+  pages={333},
+  year={1998}
+}
+@inproceedings{racchetti2015verification,
+  title={Verification and validation based on the generation of testing sequences from timing diagram specifications in industrial automation},
+  author={Racchetti, Lorenzo and Fantuzzi, Cesare and Tacconi, Lorenzo},
+  booktitle={IECON},
+  pages={002816--002821},
+  year={2015},
+  organization={IEEE}
+}
+@article{liang2007cell,
+  title={Cell mapping description for digital control system with quantization effect},
+  author={Liang, Wang and Bing-wen, Wang and Yi-Ping, Guo},
+  journal={arXiv preprint arXiv:0712.2501},
+  year={2007}
+}
+@article{al2015lyapunov,
+  title={Lyapunov stability theory},
+  author={Al Hokayem, Peter and Gallestey, Eduardo},
+  journal={Nonlinear Systems and Control-Spring},
+  year={2015}
+}
+@article{biere2003bounded,
+  title={Bounded model checking.},
+  author={Biere, Armin and Cimatti, Alessandro and Clarke, Edmund M and Strichman, Ofer and Zhu, Yunshan and others},
+  journal={ADV COMPUT},
+  volume={58},
+  number={11},
+  pages={117--148},
+  year={2003}
+}
+@inproceedings{sheeran2000checking,
+  title={Checking safety properties using induction and a SAT-solver},
+  author={Sheeran, Mary and Singh, Satnam and St{\aa}lmarck, Gunnar},
+  booktitle={FMCAD},
+  pages={127--144},
+  year={2000},
+  organization={Springer}
+}
+@article{vyatkin2008using,
+  title={Using visual specifications in verification of industrial automation controllers},
+  author={Vyatkin, Valeriy and Bouzon, Gustavo},
+  journal={EURASIP Journal on Embedded Systems},
+  volume={2008},
+  pages={5},
+  year={2008},
+  publisher={Hindawi Publishing Corp.}
+}
+@phdthesis{kayabasi2005settling,
+  title={Settling Time Measurement Techniques Achieving High Precision at High Speeds Title Page},
+  author={Kayabasi, Cezmi},
+  year={2005},
+  school={Worcester Polytechnic Institute}
+}
+@article{lequin1999optimizing,
+  title={Optimizing the settling time with iterative feedback tuning},
+  author={Lequin, Olivier and Gevers, Michel and Triest, Lionel},
+  journal={IFAC Proceedings Volumes},
+  volume={32},
+  number={2},
+  pages={4659--4663},
+  year={1999},
+  publisher={Elsevier}
+}
+@inproceedings{gross2017formal,
+  title={Formal specification and analysis approaches for spacecraft attitude control requirements},
+  author={Gross, Kerianne H},
+  booktitle={Aerospace Conference},
+  pages={1--11},
+  year={2017},
+  organization={IEEE}
+}
+@article{jin2015mining,
+  title={Mining requirements from closed-loop control models},
+  author={Jin, Xiaoqing and Donz{\'e}, Alexandre and Deshmukh, Jyotirmoy V and Seshia, Sanjit A},
+  journal={IEEE Trans. Comput.-Aided Des. Integr. Circuits Syst.},
+  volume={34},
+  number={11},
+  pages={1704--1717},
+  year={2015},
+  publisher={IEEE}
+}
+@book{ogata2002modern,
+  title={Modern control engineering},
+  author={Ogata, Katsuhiko and Yang, Yanjuan},
+  volume={4},
+  year={2002},
+  publisher={Prentice Hall}
+}
+@article{li1997pole,
+  title={On pole and zero sensitivity of linear systems},
+  author={Li, Gang},
+  journal={IEEE Transactions on Circuits and Systems I: Fundamental Theory and Applications},
+  volume={44},
+  number={7},
+  pages={583--590},
+  year={1997},
+  publisher={IEEE}
+}
+@article{li1982new,
+  title={A new conformal invariant and its applications to the Willmore conjecture and the first eigenvalue of compact surfaces},
+  author={Li, Peter and Yau, Shing-Tung},
+  journal={Inventiones mathematicae},
+  volume={69},
+  number={2},
+  pages={269--291},
+  year={1982},
+  publisher={Springer}
+}
+@article{walsh2013relationship,
+  title={Relationship between intraoperative mean arterial pressure and clinical outcomes after noncardiac surgerytoward an empirical definition of hypotension},
+  author={Walsh, Michael and Devereaux, Philip J and Garg, Amit X and Kurz, Andrea and Turan, Alparslan and Rodseth, Reitze N and Cywinski, Jacek and Thabane, Lehana and Sessler, Daniel I},
+  journal={Anesthesiology: The Journal of the American Society of Anesthesiologists},
+  volume={119},
+  number={3},
+  pages={507--515},
+  year={2013},
+  publisher={The American Society of Anesthesiologists}
+}
+@inproceedings{bianco1995model,
+  title={Model checking of probabilistic and nondeterministic systems},
+  author={Bianco, Andrea and De Alfaro, Luca},
+  booktitle={International Conference on Foundations of Software Technology and Theoretical Computer Science},
+  pages={499--513},
+  year={1995},
+  organization={Springer}
+}
+@book{springer2006invariant,
+  title={Invariant theory},
+  author={Springer, Tonny Albert},
+  volume={585},
+  year={2006},
+  publisher={Springer}
+}
+@article{yordanov2012temporal,
+  title={Temporal logic control of discrete-time piecewise affine systems},
+  author={Yordanov, Boyan and Tumova, Jana and Cerna, Ivana and Barnat, Ji{\v{r}}{\'\i} and Belta, Calin},
+  journal={IEEE Transactions on Automatic Control},
+  volume={57},
+  number={6},
+  pages={1491--1504},
+  year={2012},
+  publisher={IEEE}
+}
+@article{nilsson2016correct,
+  title={Correct-by-construction adaptive cruise control: Two approaches},
+  author={Nilsson, Petter and Hussien, Omar and Balkan, Ayca and Chen, Yuxiao and Ames, Aaron D and Grizzle, Jessy W and Ozay, Necmiye and Peng, Huei and Tabuada, Paulo},
+  journal={IEEE Trans. Contr. Sys. Techn.},
+  volume={24},
+  number={4},
+  pages={1294--1307},
+  year={2016},
+  publisher={IEEE}
+}
+@book{lax2002functional,
+  title={Functional Analysis},
+  author={Lax, P.D.},
+  publisher={Wiley Interscience},
+  url={http://www.math.univ-metz.fr/~gnc/bibliographie/Functional%20Analysis/Lax,.Functional.Analysis,.Wiley,.2002,.603s.pdf},
+  year={2002}
+}
+@inproceedings{tran2016large,
+  title={Large-scale linear systems from order-reduction (benchmark proposal)},
+  author={Tran, Hoang-Dung and Nguyen, Luan Viet and Johnson, Taylor T},
+  booktitle={3rd Applied Verification for Continuous and Hybrid Systems Workshop (ARCH), Vienna, Austria},
+  year={2016}
+}
+@inproceedings{jha2010oracle,
+  title={Oracle-guided component-based program synthesis},
+  author={Jha, Susmit and Gulwani, Sumit and Seshia, Sanjit A and Tiwari, Ashish},
+  booktitle={Proceedings of the 32nd ACM/IEEE International Conference on Software Engineering-Volume 1},
+  pages={215--224},
+  year={2010},
+  organization={ACM}
+}
+@inproceedings{ravanbakhsh2015counter,
+  title={Counter-example guided synthesis of control Lyapunov functions for switched systems},
+  author={Ravanbakhsh, Hadi and Sankaranarayanan, Sriram},
+  booktitle={Decision and Control (CDC), 2015 IEEE 54th Annual Conference on},
+  pages={4232--4239},
+  year={2015},
+  organization={IEEE}
+}
+@incollection{deb2004introduction,
+  title={Introduction to Genetic Algorithms for Engineering Optimization},
+  author={Deb, Kalyanmoy},
+  booktitle={New Optimization Techniques in Engineering},
+  pages={13--51},
+  year={2004},
+  publisher={Springer}
+}
+@article{roupec2011advanced,
+  title={Advanced genetic algorithms for engineering design problems},
+  author={Roupec, Jan},
+  journal={Engineering Mechanics},
+  volume={17},
+  number={5-6},
+  pages={407--417},
+  year={2011},
+  publisher={Association for Engineering Mechanics}
+}
+@inproceedings{abate2018counterexample,
+  title={Counterexample guided inductive synthesis modulo theories},
+  author={Abate, Alessandro and David, Cristina and Kesseli, Pascal and Kroening, Daniel and Polgreen, Elizabeth},
+  booktitle={International Conference on Computer Aided Verification},
+  pages={270--288},
+  year={2018},
+  organization={Springer}
+}
+@inproceedings{alur2013syntax,
+  title={Syntax-guided synthesis},
+  author={Alur, Rajeev and Bodik, Rastislav and Juniwal, Garvit and Martin, Milo MK and Raghothaman, Mukund and Seshia, Sanjit A and Singh, Rishabh and Solar-Lezama, Armando and Torlak, Emina and Udupa, Abhishek},
+  booktitle={Formal Methods in Computer-Aided Design (FMCAD), 2013},
+  pages={1--8},
+  year={2013},
+  organization={IEEE}
+}
